--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.54.0",
+		"svelte-paginate": "^0.1.0",
 		"vite": "^4.0.0"
 	},
 	"type": "module"
