--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-vercel": "^2.3.1",
 		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.54.0",
 		"svelte-paginate": "^0.1.0",
